--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,10 +30,15 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
 
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
-
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.jakewharton:butterknife:7.0.1'
+
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+    compile 'com.google.code.gson:gson:2.8.1'
 
     testCompile 'junit:junit:4.12'
 }
